--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   "dependencies": {
     "nfc-react-native": "^0.4.4",
     "react": "15.4.2",
-    "react-native": "0.42.3"
+    "react-native": "0.42.3",
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
     "babel-preset-react-native": "1.9.1",
     "jest": "19.0.2",
-    "react-test-renderer": "15.4.2"
+    "react-test-renderer": "15.4.2",
+    "redux-devtools": "^3.3.2"
   },
   "jest": {
     "preset": "react-native"
