--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "react": "15.4.2",
     "react-native": "0.42.3",
     "react-native-android-back-button": "^0.3.0",
+    "react-native-image-zoom": "^0.32.0",
+    "react-native-photo-view": "^1.2.0",
+    "react-native-transformable-image": "0.0.18",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0"
   },
@@ -18,7 +21,8 @@
     "babel-preset-react-native": "1.9.1",
     "jest": "19.0.2",
     "react-test-renderer": "15.4.2",
-    "redux-devtools": "^3.3.2"
+    "redux-devtools": "^3.3.2",
+    "rnpm-plugin-windows": "^0.2.4"
   },
   "jest": {
     "preset": "react-native"
