--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "babel-preset-react-native": "1.9.1",
     "jest": "19.0.2",
     "react-test-renderer": "15.4.2",
-    "redux-devtools": "^3.3.2",
-    "rnpm-plugin-windows": "^0.2.4"
+    "redux-devtools": "^3.3.2"
   },
   "jest": {
     "preset": "react-native"
